test_inputs/bad/non_ascii.lat
int main() {
    printString("ą");
    return 0;
}
